tests/snapshots/serde__display_set_circular_self.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nconst s = new Set(); s.add(s); s"
---
const v0 = new Set([
]);
v0.add(v0);
v0
