tests/snapshots/serde__display_set_object_element.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Set([{ a: true }])"
---
new Set([
  {
    "a": true,
  },
])
