tests/snapshots/serde__display_set_two_elements.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Set([1, 2])"
---
new Set([
  1,
  2,
])
