tests/snapshots/serde__display_sparse_array_literal_with_hole.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[1, 2, /* hole */, 4]"
---
const v0 = new Array(4);
v0[0] = 1;
v0[1] = 2;
v0[3] = 4;
v0
