tests/snapshots/serde__display_sparse_array_one_element_length_one.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst arr = new Array(1);\narr[0] = 1;\narr\n"
---
const v0 = new Array(1);
v0[0] = 1;
v0
