tests/snapshots/serde__display_sparse_array_one_element_length_two_with_properties.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst arr = new Array();\narr[1] = 1;\narr.foo = \"bar\";\narr\n"
---
const v0 = new Array(2);
v0[1] = 1;
v0["foo"] = "bar";
v0
