tests/snapshots/serde__display_sparse_array_with_object.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[/* hole */, {a: 2}]"
---
const v1 = new Array(2);
v1[1] = {
  "a": 2,
};
v1
