tests/snapshots/serde__display_string_primitive_two_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew String('asd 🌎')"
---
new String("asd 🌎")
